# RA3

./: CMakeLists.txt  README.md  build.sh  generate.sh  run-synth.sh  run.sh  test.sh
plot/: plot_zipfian.py
result/: crusoe.csv  dracula.csv  iliad.csv  mare-balena.csv  midsummer-nights-dream.csv  quijote.csv  valley-fear.csv  war-peace.csv
result_hash/: murmur.csv  murmur.execution  nohash.csv  nohash.execution  regular.csv  regular.execution  xhash.csv  xhash.execution
result_synth/N/: 100000.csv  1000000.csv  1500000.csv  2000000.csv  2500000.csv  500000.csv
result_synth/alpha/: 0_3.csv  0_5.csv  0_7.csv  0_9.csv  1_0.csv
result_synth/n/: 10000.csv  30000.csv  50000.csv  70000.csv  90000.csv
src/: cardinality.cpp  cardinality.hpp  main.cpp  murmur.cpp  parser.cpp  parser.hpp  util.hpp  xxhash64.h  zipfian.cpp  zipfian.hpp
